--- a/src/app/alumno/pages/academico/academico.component.scss
+++ b/src/app/alumno/pages/academico/academico.component.scss
@@ -1,3 +1,10 @@
 i{
     color: blue;
 }
+.bg-light-theme {
+    background-color: #2e89eb96 !important;
+    color: #007AFF !important;
+}
+.bg-theme {
+    background-color: #007AFF !important;
+}
