--- a/src/app/shared/auth/auth-footer/auth-footer.component.html
+++ b/src/app/shared/auth/auth-footer/auth-footer.component.html
@@ -1,7 +1,7 @@
-<div class="col-12 col-md-12 col-lg py-2">
+<div class="col-12 col-md-12 col-lg-12 py-2 text-center">
     <span class="text-secondary small">© Copyright {{date | date:'yyyy'}} ALTUX SAC. Todos los derechos reservados.</span>
 </div>
-<div class="col-12 col-md-12 col-lg-auto align-self-center">
+<!-- <div class="col-12 col-md-12 col-lg-auto align-self-center">
     <ul class="nav small">
         <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
         <li class="nav-item">|</li>
@@ -9,4 +9,4 @@
         <li class="nav-item">|</li>
         <li class="nav-item"><a class="nav-link" href="#">Políticas de Privacidad</a></li>
     </ul>
-</div>
+</div> -->
