--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-md col-lg py-2">
+        <div class="col-12 col-md-12 col-lg-12 py-2 text-center">
             <span class="text-secondary small">© Copyright {{date | date:'yyyy'}} ALTUX SAC. Todos los derechos reservados.</span>
         </div>
-        <div class="col-12 col-md-auto col-lg-auto align-self-center">
+        <!-- <div class="col-12 col-md-auto col-lg-auto align-self-center">
             <ul class="nav small">
                 <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
                 <li class="nav-item">|</li>
@@ -11,6 +11,6 @@
                 <li class="nav-item">|</li>
                 <li class="nav-item"><a class="nav-link" href="#">Políticas de Privacidad</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </div>
