--- a/src/app/shared/layout/content/content.component.html
+++ b/src/app/shared/layout/content/content.component.html
@@ -7,11 +7,11 @@
 <!-- background ends  -->
 
 <!-- Header -->
-<app-header #HeaderEl class="header d-block position-fixed fixed-top top-0 start-0 "></app-header>
+<app-header #HeaderEl class="header d-block position-fixed fixed-top top-0 start-0" style="background: #174791 !important;border-bottom: 1px solid white;"></app-header>
 <!-- Header ends -->
 
 <!-- Sidebar -->
-<app-sidebar #SidebarEl class="sidebar-wrap"></app-sidebar>
+<app-sidebar #SidebarEl class="sidebar-wrap" style="background: #174791 !important;"></app-sidebar>
 <!-- Sidebar ends -->
 
 <!-- Begin page content -->
